# ClientServerPoW

./: README.md  docker-compose.yaml  run.sh
client/: Dockerfile
client/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: consensus.rs  main.rs  middleware.rs  server.rs  server_config.json
