[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.12", features = ["full"] }
rand = "0.8"
sha2 = "0.10.6"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.17"
simplelog = "0.12.1"
futures="0.3.25"
async-trait="0.1.56"
